[package]
name = "todo"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
diesel = { version = "2.0.2", features = ["sqlite", "r2d2"] }
diesel_migrations = "2.0.0"
rocket = { git = "https://github.com/SergioBenitez/Rocket.git", branch = "master", features = ["tls"] }
rocket_dyn_templates = { git = "https://github.com/SergioBenitez/Rocket.git", branch = "master", features = ["tera"] }
rocket_sync_db_pools = { git = "https://github.com/SergioBenitez/Rocket.git", branch = "master", features = ["diesel_sqlite_pool"] }
rusqlite = { version = "0.28.0", features = ["bundled"] }

[dev-dependencies]
parking_lot = "0.12.1"
rand = "0.8.4"
